--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.2/modernizr.min.js"></script>
 </head>
 <body>
-  <div id="wall">
+  <div id="wall"> 
     <div class="tag-1"></div>
     <div id="tag-2"></div>
     <div id="tag-3" class="slick wicked"></div>
@@ -26,7 +26,7 @@
       </div>
     </div>
     <div class="parent">
-      <div>
+      <div id="div-child">
         <div id="tag-7" class="slick"></div>
       </div>
       <div></div>
